// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectYears Container renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectYears
    handleCheck={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="field"
>
        <label
                className="label"
        >
                Years
        </label>
        <CheckboxTree
                checked={Array []}
                disabled={false}
                expandDisabled={false}
                expanded={Array []}
                name={undefined}
                nameAsArray={false}
                noCascade={false}
                nodes={
                        Array [
                                Object {
                                  "children": Array [],
                                  "icon": <i
                                    className="fa fa-calendar-check-o"
                        />,
                                  "label": "All years",
                                  "value": "ALL",
                                },
                              ]
                }
                onCheck={[Function]}
                onExpand={[Function]}
                optimisticToggle={true}
                showNodeIcon={true}
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            Years
</label>,
          <CheckboxTree
            checked={Array []}
            disabled={false}
            expandDisabled={false}
            expanded={Array []}
            name={undefined}
            nameAsArray={false}
            noCascade={false}
            nodes={
                        Array [
                                    Object {
                                      "children": Array [],
                                      "icon": <i
                                        className="fa fa-calendar-check-o"
                        />,
                                      "label": "All years",
                                      "value": "ALL",
                                    },
                                  ]
            }
            onCheck={[Function]}
            onExpand={[Function]}
            optimisticToggle={true}
            showNodeIcon={true}
/>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Years",
            "className": "label",
          },
          "ref": null,
          "rendered": "Years",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": Array [],
            "disabled": false,
            "expandDisabled": false,
            "expanded": Array [],
            "name": undefined,
            "nameAsArray": false,
            "noCascade": false,
            "nodes": Array [
              Object {
                "children": Array [],
                "icon": <i
                  className="fa fa-calendar-check-o"
/>,
                "label": "All years",
                "value": "ALL",
              },
            ],
            "onCheck": [Function],
            "onExpand": [Function],
            "optimisticToggle": true,
            "showNodeIcon": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="field"
>
          <label
                    className="label"
          >
                    Years
          </label>
          <CheckboxTree
                    checked={Array []}
                    disabled={false}
                    expandDisabled={false}
                    expanded={Array []}
                    name={undefined}
                    nameAsArray={false}
                    noCascade={false}
                    nodes={
                              Array [
                                        Object {
                                          "children": Array [],
                                          "icon": <i
                                            className="fa fa-calendar-check-o"
                              />,
                                          "label": "All years",
                                          "value": "ALL",
                                        },
                                      ]
                    }
                    onCheck={[Function]}
                    onExpand={[Function]}
                    optimisticToggle={true}
                    showNodeIcon={true}
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="label"
>
              Years
</label>,
            <CheckboxTree
              checked={Array []}
              disabled={false}
              expandDisabled={false}
              expanded={Array []}
              name={undefined}
              nameAsArray={false}
              noCascade={false}
              nodes={
                            Array [
                                          Object {
                                            "children": Array [],
                                            "icon": <i
                                              className="fa fa-calendar-check-o"
                            />,
                                            "label": "All years",
                                            "value": "ALL",
                                          },
                                        ]
              }
              onCheck={[Function]}
              onExpand={[Function]}
              optimisticToggle={true}
              showNodeIcon={true}
/>,
          ],
          "className": "field",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Years",
              "className": "label",
            },
            "ref": null,
            "rendered": "Years",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": Array [],
              "disabled": false,
              "expandDisabled": false,
              "expanded": Array [],
              "name": undefined,
              "nameAsArray": false,
              "noCascade": false,
              "nodes": Array [
                Object {
                  "children": Array [],
                  "icon": <i
                    className="fa fa-calendar-check-o"
/>,
                  "label": "All years",
                  "value": "ALL",
                },
              ],
              "onCheck": [Function],
              "onExpand": [Function],
              "optimisticToggle": true,
              "showNodeIcon": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SelectYears Container renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SelectYears
    handleCheck={[Function]}
    measureId="123"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="field"
>
        <label
                className="label"
        >
                Years
        </label>
        <CheckboxTree
                checked={Array []}
                disabled={false}
                expandDisabled={false}
                expanded={Array []}
                name={undefined}
                nameAsArray={false}
                noCascade={false}
                nodes={
                        Array [
                                Object {
                                  "children": Array [
                                    Object {
                                      "icon": <i
                                        className="fa fa-calendar-plus-o"
                        />,
                                      "label": "2001",
                                      "value": "2001",
                                    },
                                    Object {
                                      "icon": <i
                                        className="fa fa-calendar-plus-o"
                        />,
                                      "label": "2002",
                                      "value": "2002",
                                    },
                                    Object {
                                      "icon": <i
                                        className="fa fa-calendar-plus-o"
                        />,
                                      "label": "2003",
                                      "value": "2003",
                                    },
                                  ],
                                  "icon": <i
                                    className="fa fa-calendar-check-o"
                        />,
                                  "label": "All years",
                                  "value": "ALL",
                                },
                              ]
                }
                onCheck={[Function]}
                onExpand={[Function]}
                optimisticToggle={true}
                showNodeIcon={true}
        />
</div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <label
            className="label"
>
            Years
</label>,
          <CheckboxTree
            checked={Array []}
            disabled={false}
            expandDisabled={false}
            expanded={Array []}
            name={undefined}
            nameAsArray={false}
            noCascade={false}
            nodes={
                        Array [
                                    Object {
                                      "children": Array [
                                        Object {
                                          "icon": <i
                                            className="fa fa-calendar-plus-o"
                        />,
                                          "label": "2001",
                                          "value": "2001",
                                        },
                                        Object {
                                          "icon": <i
                                            className="fa fa-calendar-plus-o"
                        />,
                                          "label": "2002",
                                          "value": "2002",
                                        },
                                        Object {
                                          "icon": <i
                                            className="fa fa-calendar-plus-o"
                        />,
                                          "label": "2003",
                                          "value": "2003",
                                        },
                                      ],
                                      "icon": <i
                                        className="fa fa-calendar-check-o"
                        />,
                                      "label": "All years",
                                      "value": "ALL",
                                    },
                                  ]
            }
            onCheck={[Function]}
            onExpand={[Function]}
            optimisticToggle={true}
            showNodeIcon={true}
/>,
        ],
        "className": "field",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Years",
            "className": "label",
          },
          "ref": null,
          "rendered": "Years",
          "type": "label",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "checked": Array [],
            "disabled": false,
            "expandDisabled": false,
            "expanded": Array [],
            "name": undefined,
            "nameAsArray": false,
            "noCascade": false,
            "nodes": Array [
              Object {
                "children": Array [
                  Object {
                    "icon": <i
                      className="fa fa-calendar-plus-o"
/>,
                    "label": "2001",
                    "value": "2001",
                  },
                  Object {
                    "icon": <i
                      className="fa fa-calendar-plus-o"
/>,
                    "label": "2002",
                    "value": "2002",
                  },
                  Object {
                    "icon": <i
                      className="fa fa-calendar-plus-o"
/>,
                    "label": "2003",
                    "value": "2003",
                  },
                ],
                "icon": <i
                  className="fa fa-calendar-check-o"
/>,
                "label": "All years",
                "value": "ALL",
              },
            ],
            "onCheck": [Function],
            "onExpand": [Function],
            "optimisticToggle": true,
            "showNodeIcon": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="field"
>
          <label
                    className="label"
          >
                    Years
          </label>
          <CheckboxTree
                    checked={Array []}
                    disabled={false}
                    expandDisabled={false}
                    expanded={Array []}
                    name={undefined}
                    nameAsArray={false}
                    noCascade={false}
                    nodes={
                              Array [
                                        Object {
                                          "children": Array [
                                            Object {
                                              "icon": <i
                                                className="fa fa-calendar-plus-o"
                              />,
                                              "label": "2001",
                                              "value": "2001",
                                            },
                                            Object {
                                              "icon": <i
                                                className="fa fa-calendar-plus-o"
                              />,
                                              "label": "2002",
                                              "value": "2002",
                                            },
                                            Object {
                                              "icon": <i
                                                className="fa fa-calendar-plus-o"
                              />,
                                              "label": "2003",
                                              "value": "2003",
                                            },
                                          ],
                                          "icon": <i
                                            className="fa fa-calendar-check-o"
                              />,
                                          "label": "All years",
                                          "value": "ALL",
                                        },
                                      ]
                    }
                    onCheck={[Function]}
                    onExpand={[Function]}
                    optimisticToggle={true}
                    showNodeIcon={true}
          />
</div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label
              className="label"
>
              Years
</label>,
            <CheckboxTree
              checked={Array []}
              disabled={false}
              expandDisabled={false}
              expanded={Array []}
              name={undefined}
              nameAsArray={false}
              noCascade={false}
              nodes={
                            Array [
                                          Object {
                                            "children": Array [
                                              Object {
                                                "icon": <i
                                                  className="fa fa-calendar-plus-o"
                            />,
                                                "label": "2001",
                                                "value": "2001",
                                              },
                                              Object {
                                                "icon": <i
                                                  className="fa fa-calendar-plus-o"
                            />,
                                                "label": "2002",
                                                "value": "2002",
                                              },
                                              Object {
                                                "icon": <i
                                                  className="fa fa-calendar-plus-o"
                            />,
                                                "label": "2003",
                                                "value": "2003",
                                              },
                                            ],
                                            "icon": <i
                                              className="fa fa-calendar-check-o"
                            />,
                                            "label": "All years",
                                            "value": "ALL",
                                          },
                                        ]
              }
              onCheck={[Function]}
              onExpand={[Function]}
              optimisticToggle={true}
              showNodeIcon={true}
/>,
          ],
          "className": "field",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Years",
              "className": "label",
            },
            "ref": null,
            "rendered": "Years",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "checked": Array [],
              "disabled": false,
              "expandDisabled": false,
              "expanded": Array [],
              "name": undefined,
              "nameAsArray": false,
              "noCascade": false,
              "nodes": Array [
                Object {
                  "children": Array [
                    Object {
                      "icon": <i
                        className="fa fa-calendar-plus-o"
/>,
                      "label": "2001",
                      "value": "2001",
                    },
                    Object {
                      "icon": <i
                        className="fa fa-calendar-plus-o"
/>,
                      "label": "2002",
                      "value": "2002",
                    },
                    Object {
                      "icon": <i
                        className="fa fa-calendar-plus-o"
/>,
                      "label": "2003",
                      "value": "2003",
                    },
                  ],
                  "icon": <i
                    className="fa fa-calendar-check-o"
/>,
                  "label": "All years",
                  "value": "ALL",
                },
              ],
              "onCheck": [Function],
              "onExpand": [Function],
              "optimisticToggle": true,
              "showNodeIcon": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
